@@ -4,8 +4,6 @@
 
 ======== Code ==========================================================
 
-(-) Move EXIT in all levels
-
 (-) Pulling
     (-) vikings can pull some objects
     (-) [GO] Pullable block 80*80px
